--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -158,7 +158,7 @@
                         <div class="d-flex align-items-start gap-3">
                           <div class="flex-fill">
                             <h6 class="mb-2 fs-12 cus">
-                              Settled Payments (in ₹)
+                              Success Payments (in ₹)
                             </h6>
                             <div class="pb-0 mt-0">
                               <div>
