Modified regions table

--- a/public/view/m-region/manage-region.ejs
+++ b/public/view/m-region/manage-region.ejs
@@ -123,9 +123,8 @@
                     <tr>
                       <th scope="col" style="border: 1px solid grey;">S.No.</th>
                       <th scope="col" style="border: 1px solid grey;">Region Name</th>
-                      <th scope="col" style="border: 1px solid grey;">Chapter Type</th>
-                      <th scope="col" style="border: 1px solid grey;">Chapter Status</th>
-                      <th scope="col" style="border: 1px solid grey;">Chapter Days</th>
+                      <th scope="col" style="border: 1px solid grey;">No. of Chapters</th>
+                      <th scope="col" style="border: 1px solid grey;">No. of Members</th>
                       <th scope="col" style="border: 1px solid grey;">Contact Person</th>
                       <th scope="col" style="border: 1px solid grey;">Contact Number</th>
                       <th scope="col" style="border: 1px solid grey;">Region Status</th>
