--- a/public/view/m-chapter/manage-chapter.ejs
+++ b/public/view/m-chapter/manage-chapter.ejs
@@ -58,31 +58,74 @@
               <div class="card-title">All Chapters</div>
               <div class="d-flex gap-3 align-items-center flex-wrap">
                 <div class="btn-group">
-                  <button
-                    class="btn btn-outline-light border dropdown-toggle"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    <i class="ti ti-sort-descending-2 me-1"></i> Region
-                  </button>
-
-                  <button
-                    class="btn btn-outline-light border dropdown-toggle"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    <i class="ti ti-sort-descending-2 me-1"></i> Filter
-                  </button>
-                  <button
-                    class="btn btn-outline-light border"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    + Add New Chapter
-                  </button>
+                  <div class="dropdown">
+                    <a
+                      href="javascript:void(0);"
+                      class="btn btn-sm btn-light text-muted dropdown-toggle"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="true"
+                    >
+                      <i class="ti ti-sort-descending-2 me-1"></i>
+                      Region
+                    </a>
+                    <ul class="dropdown-menu" role="menu" data-popper-placement="bottom-end">
+                      <li>
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="active">Active</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="inactive">Inactive</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="deleted">Deleted</a>
+                      </li>
+                    </ul>
+                    <a
+                      href="javascript:void(0);"
+                      class="btn btn-sm btn-light text-muted dropdown-toggle"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="true"
+                    >
+                      <i class="ti ti-sort-descending-2 me-1"></i>
+                      Meeting Day
+                    </a>
+                    <ul class="dropdown-menu" role="menu" data-popper-placement="bottom-end">
+                      <li>
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="active">Monday</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="inactive">Tuesday</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="deleted">Wednesday</a>
+                      </li>
+                    </ul>
+                    <a
+                      href="javascript:void(0);"
+                      class="btn btn-sm btn-light text-muted dropdown-toggle"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="true"
+                    >
+                      <i class="ti ti-sort-descending-2 me-1"></i>
+                      Status
+                    </a>
+                    <ul class="dropdown-menu" role="menu" data-popper-placement="bottom-end">
+                      <li>
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="active">Active</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="inactive">Inactive</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="deleted">Deleted</a>
+                      </li>
+                    </ul>
+                  </div>
+                 <a href="/c/add-chapter"><button
+                  class="btn btn-outline-light border"
+                  type="button"
+                >
+                  + Add New Chapter
+                </button></a> 
                 </div>
                 <div class="custom-form-group flex-grow-1">
                   <input
@@ -113,11 +156,10 @@
                       <th scope="col" style="border: 1px solid grey;">S.No.</th>
                       <th scope="col" style="border: 1px solid grey;">Chapter Name</th>
                       <th scope="col" style="border: 1px solid grey;">Chapter Region</th>
-                      <th scope="col" style="border: 1px solid grey;">Chapter Fees</th>
-                      <th scope="col" style="border: 1px solid grey;">Chapter Logo</th>
+                      <th scope="col" style="border: 1px solid grey;">No. of Members</th>
                       <th scope="col" style="border: 1px solid grey;">Chapter Meeting Day</th>
-                      <th scope="col" style="border: 1px solid grey;">Chapter Type</th>
                       <th scope="col" style="border: 1px solid grey;">Chapter Kitty Fees</th>
+                      <th scope="col" style="border: 1px solid grey;">Chapter Visitor Fees</th>
                       <th scope="col" style="border: 1px solid grey;">Status</th>
                       <th scope="col" style="border: 1px solid grey;">Actions</th>
                     </tr>
