Page made for view region and chapter

--- a/public/view/partials/header.ejs
+++ b/public/view/partials/header.ejs
@@ -1015,8 +1015,8 @@
             <!-- End::header-element -->
 
             <!-- Start::header-element -->
-            <li class="header-element country-selector dropdown">
-              <!-- Start::header-link|dropdown-toggle -->
+            <!-- <li class="header-element country-selector dropdown">
+              Start::header-link|dropdown-toggle
               <a
                 href="javascript:void(0);"
                 class="header-link dropdown-toggle"
@@ -1038,7 +1038,7 @@
                   ></path>
                 </svg>
               </a>
-              <!-- End::header-link|dropdown-toggle -->
+              End::header-link|dropdown-toggle
               <ul
                 class="main-header-dropdown dropdown-menu dropdown-menu-end"
                 data-popper-placement="none"
@@ -1138,7 +1138,7 @@
                   </a>
                 </li>
               </ul>
-            </li>
+            </li> -->
             <!-- End::header-element -->
 
             <!-- Start::header-element -->
