--- a/public/view/m-universalLinks/manage-universal-links.ejs
+++ b/public/view/m-universalLinks/manage-universal-links.ejs
@@ -47,7 +47,7 @@
               <div class="card-title">All Universal Links</div>
               <div class="d-flex gap-3 align-items-center flex-wrap">
                 <div class="btn-group">
-                  <div class="dropdown">
+                  <!-- <div class="dropdown">
                     <a
                       href="javascript:void(0);"
                       class="btn btn-sm btn-light text-muted dropdown-toggle"
@@ -78,7 +78,7 @@
                         >
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
 
                 </div>
                 <div class="custom-form-group flex-grow-1">
