--- a/public/view/partials/header.ejs
+++ b/public/view/partials/header.ejs
@@ -1186,156 +1186,12 @@
                     <span
                       class="badge bg-secondary text-fixed-white"
                       id="notifiation-data"
-                      >5 Unread</span
+                      >1 Unread</span
                     >
                   </div>
                 </div>
                 <div class="dropdown-divider"></div>
                 <ul class="list-unstyled mb-0" id="header-notification-scroll">
-                  <li class="dropdown-item">
-                    <div class="d-flex align-items-center">
-                      <div class="pe-2 lh-1">
-                        <span
-                          class="avatar avatar-md avatar-rounded bg-primary"
-                        >
-                          <img src="   images/faces/1.jpg" alt="user1" />
-                        </span>
-                      </div>
-                      <div
-                        class="flex-grow-1 d-flex align-items-center justify-content-between"
-                      >
-                        <div>
-                          <p class="mb-0 fw-medium">
-                            <a href="#">New Messages</a>
-                          </p>
-                          <div
-                            class="text-muted fw-normal fs-12 header-notification-text text-truncate"
-                          >
-                            Jane Sam sent you a message.
-                          </div>
-                          <div class="fw-normal fs-10 text-muted op-8">Now</div>
-                        </div>
-                        <div>
-                          <a
-                            href="javascript:void(0);"
-                            class="min-w-fit-content dropdown-item-close1"
-                          >
-                            <i class="ri-close-line"></i>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                  <li class="dropdown-item">
-                    <div class="d-flex align-items-center">
-                      <div class="pe-2 lh-1">
-                        <span
-                          class="avatar avatar-md bg-primary avatar-rounded fs-20"
-                        >
-                          <i class="fe fe-shopping-cart lh-1"></i>
-                        </span>
-                      </div>
-                      <div
-                        class="flex-grow-1 d-flex align-items-center justify-content-between"
-                      >
-                        <div>
-                          <p class="mb-0 fw-medium">
-                            <a href="#">Order Updates</a>
-                          </p>
-                          <div
-                            class="text-muted fw-normal fs-12 header-notification-text text-truncate"
-                          >
-                            Order <span class="text-primary1">#54321</span> has
-                            been shipped.
-                          </div>
-                          <div class="fw-normal fs-10 text-muted op-8">
-                            2 hours ago
-                          </div>
-                        </div>
-                        <div>
-                          <a
-                            href="javascript:void(0);"
-                            class="min-w-fit-content dropdown-item-close1"
-                          >
-                            <i class="ri-close-line"></i>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                  <li class="dropdown-item">
-                    <div class="d-flex align-items-center">
-                      <div class="pe-2 lh-1">
-                        <span class="avatar avatar-md bg-orange avatar-rounded">
-                          <img src="   images/faces/10.jpg" alt="user1" />
-                        </span>
-                      </div>
-                      <div
-                        class="flex-grow-1 d-flex align-items-center justify-content-between"
-                      >
-                        <div>
-                          <p class="mb-0 fw-medium">
-                            <a href="#">Comment on Post</a>
-                          </p>
-                          <div
-                            class="text-muted fw-normal fs-12 header-notification-text text-truncate"
-                          >
-                            Reacted:
-                            <span class="text-primary3">John Richard</span> on
-                            your next purchase!
-                          </div>
-                          <div class="fw-normal fs-10 text-muted op-8">
-                            2 hours ago
-                          </div>
-                        </div>
-                        <div>
-                          <a
-                            href="javascript:void(0);"
-                            class="min-w-fit-content dropdown-item-close1"
-                          >
-                            <i class="ri-close-line"></i>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                  <li class="dropdown-item">
-                    <div class="d-flex align-items-center">
-                      <div class="pe-2 lh-1">
-                        <span
-                          class="avatar avatar-md bg-success avatar-rounded"
-                        >
-                          <img src="   images/faces/11.jpg" alt="user1" />
-                        </span>
-                      </div>
-                      <div
-                        class="flex-grow-1 d-flex align-items-center justify-content-between"
-                      >
-                        <div>
-                          <p class="mb-0 fw-medium">
-                            <a href="#">Follow Request</a>
-                          </p>
-                          <div
-                            class="text-muted fw-normal fs-12 header-notification-text text-truncate"
-                          >
-                            <span class="text-info">Kelin Brown</span> has sent
-                            you the request.
-                          </div>
-                          <div class="fw-normal fs-10 text-muted op-8">
-                            1 Day ago
-                          </div>
-                        </div>
-                        <div>
-                          <a
-                            href="javascript:void(0);"
-                            class="min-w-fit-content dropdown-item-close1"
-                          >
-                            <i class="ri-close-line"></i>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
                   <li class="dropdown-item">
                     <div class="d-flex align-items-center">
                       <div class="pe-2 lh-1">
@@ -1350,13 +1206,12 @@
                       >
                         <div>
                           <p class="mb-0 fw-medium">
-                            <a href="#">Exclusive Offers</a>
+                            <a href="#">Yaya, new member</a>
                           </p>
                           <div
                             class="text-muted fw-normal fs-12 header-notification-text text-truncate"
                           >
-                            Enjoy<span class="text-success">20% off</span> on
-                            your next purchase!
+                            Welcome, Rajiv Ahuja, a new member in prolific chapter
                           </div>
                           <div class="fw-normal fs-10 text-muted op-8">
                             5 hours ago
@@ -1414,7 +1269,7 @@
                 <div class="d-flex align-items-center">
                   <div>
                     <img
-                      src="../../assets/images/faces/15-3.jpg"
+                      src="https://cdn-icons-png.flaticon.com/512/194/194828.png"
                       alt="img"
                       class="avatar avatar-sm"
                       style="border-radius: 50px"
@@ -1449,17 +1304,7 @@
                     >Mail Inbox</a
                   >
                 </li>
-                <li>
-                  <a class="dropdown-item d-flex align-items-center" href="#"
-                    ><i
-                      class="fe fe-database p-1 rounded-circle bg-primary-transparent klist me-2 fs-16"
-                    ></i
-                    >File Manger<span
-                      class="badge bg-primary1 text-fixed-white ms-auto fs-9"
-                      >2</span
-                    ></a
-                  >
-                </li>
+
                 <li>
                   <a class="dropdown-item d-flex align-items-center" href="#"
                     ><i
@@ -1468,16 +1313,9 @@
                     >Settings</a
                   >
                 </li>
-                <li class="border-top bg-light">
-                  <a class="dropdown-item d-flex align-items-center" href="#"
-                    ><i
-                      class="fe fe-help-circle p-1 rounded-circle bg-primary-transparent set me-2 fs-16"
-                    ></i
-                    >Help</a
-                  >
-                </li>
+
                 <li>
-                  <a class="dropdown-item d-flex align-items-center" href="#"
+                  <a class="dropdown-item d-flex align-items-center" href="/"
                     ><i
                       class="fe fe-lock p-1 rounded-circle bg-primary-transparent ut me-2 fs-16"
                     ></i
