Edit chapter setup and regions fetched

--- a/public/view/m-member/view-members.ejs
+++ b/public/view/m-member/view-members.ejs
@@ -428,19 +428,11 @@
                 <div>
                     <nav>
                         <ol class="breadcrumb mb-1">
-                            <li class="breadcrumb-item"><a href="javascript:void(0);">Pages</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Profile</li>
+                            <li class="breadcrumb-item"><a href="javascript:void(0);">Let's View A Member</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">View Member Details</li>
                         </ol>
                     </nav>
-                    <h1 class="page-title fw-medium fs-18 mb-0">Profile</h1>
-                </div>
-                <div class="btn-list">
-                    <button class="btn btn-white btn-wave">
-                        <i class="ri-filter-3-line align-middle me-1 lh-1"></i> Filter
-                    </button>
-                    <button class="btn btn-primary btn-wave me-0">
-                        <i class="ri-share-forward-line me-1"></i> Share
-                    </button>
+                    <h1 class="page-title fw-medium fs-18 mb-0">Profile Overview</h1>
                 </div>
             </div>
             <!-- Page Header Close -->
