Fetched all data and fields edit chapter

--- a/public/view/m-chapter/edit-chapter.ejs
+++ b/public/view/m-chapter/edit-chapter.ejs
@@ -546,18 +546,12 @@
                         </div>
 
                         <div class="col-xl-6">
-                          <label for="chapter_status" class="form-label"
-                            >Chapter Status</label
-                          >
-                          <select
-                            class="form-control"
-                            data-trigger=""
-                            id="chapter_status"
-                            name="chapter_status"
-                          >
+                          <label for="chapter_status" class="form-label">Chapter Status</label>
+                          <select class="form-control" id="chapter_status" name="chapter_status">
                             <option value="">Select</option>
                           </select>
                         </div>
+                        
 
                         <div class="col-xl-6">
                           <label for="chapter_logo" class="form-label"
@@ -929,7 +923,7 @@
 </div>
 <!-- End::content  -->
 
-<script src="../../assets/js/country.js"></script>
+<!-- <script src="../../assets/js/country.js"></script> -->
 <script src="../../assets/js/editChapter.js"></script>
 
 <%- include('../partials/footer') %>
