--- a/public/view/m-chapter/edit-chapter.ejs
+++ b/public/view/m-chapter/edit-chapter.ejs
@@ -910,8 +910,8 @@
                 />
               </div>
 
-              <button class="btn btn-success me-2 mb-2 mb-sm-0">
-                Edit Chapter
+              <button type="button" id="updateChapterBtn" class="btn btn-success me-2 mb-2 mb-sm-0">
+                Edit Region
               </button>
             </div>
           </div>
@@ -922,7 +922,7 @@
   </div>
 </div>
 <!-- End::content  -->
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- <script src="../../assets/js/country.js"></script> -->
 <script src="../../assets/js/editChapter.js"></script>
 
