--- a/public/view/m-chapter/manage-chapter.ejs
+++ b/public/view/m-chapter/manage-chapter.ejs
@@ -197,6 +197,7 @@
         </div>
       </div>
       <!-- End::content  -->
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="../../assets/js/chapter.js"></script>
 
       <%- include('../partials/footer') %> 
