--- a/public/view/m-member/manage-members.ejs
+++ b/public/view/m-member/manage-members.ejs
@@ -212,6 +212,7 @@
                       <th scope="col" style="border: 1px solid grey;">Actions</th>
                     </tr>
                   </thead>
+                  <tbody id="chaptersTableBody"></tbody>
                   <tbody>
                     
                   </tbody>
@@ -256,7 +257,7 @@
         </div>
       </div>
       <!-- End::content  -->
-
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="../../assets/js/script.js"></script>
 
 
