--- a/public/view/m-member/edit-members.ejs
+++ b/public/view/m-member/edit-members.ejs
@@ -728,7 +728,7 @@
                            placeholder="Sunil Kuzhuvelil" />
                   </div>
                   
-                  <button class="btn btn-success me-2 mb-2 mb-sm-0">
+                  <button type="button" id="updateChapterBtn" class="btn btn-success me-2 mb-2 mb-sm-0">
                     Edit Member
                   </button>
                 </div>
@@ -741,7 +741,7 @@
         </div>
       </div>
       <!-- End::content  -->
-
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- <script src="../../assets/js/country.js"></script> -->
   <script src="../../assets/js/edit-member.js"></script>
 
