Delete universal links

--- a/public/view/m-universalLinks/manage-universal-links.ejs
+++ b/public/view/m-universalLinks/manage-universal-links.ejs
@@ -113,6 +113,7 @@
                       <th scope="col" style="border: 1px solid grey;">Link Slug </th>
                       <th scope="col" style="border: 1px solid grey;">Payment Gateway <b>(Active)</b>  </th>
                       <th scope="col" style="border: 1px solid grey;">Status</th>
+                      <th scope="col" style="border: 1px solid grey;">Actions</th>
                     </tr>
                   </thead>
                   <tbody id="chaptersTableBody">
@@ -146,5 +147,6 @@
       <!-- End::content  -->
 
       <script src="../../assets/js/universalLinks.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
       <%- include('../partials/footer') %>
