Edit filters in chapter

--- a/public/view/m-chapter/manage-chapter.ejs
+++ b/public/view/m-chapter/manage-chapter.ejs
@@ -108,6 +108,15 @@
                       <!-- Items will be dynamically inserted here -->
                     </ul>
                   </div>
+                  <!-- Apply Filter Button -->
+                  <button href=""
+                  id="apply-filters-btn"
+                  class="btn btn-sm btn-primary btn-wave waves-light">
+            Apply Filter
+          </button>
+          <div style="margin-left: 3px;"><button id="reset-filters-btn" class="btn btn-sm btn-danger btn-wave waves-light">
+            Reset Filter
+          </button></div>
                  <a href="/c/add-chapter"><button
                   class="btn btn-outline-light border"
                   type="button"
