Filteration in chapter

--- a/public/view/partials/header.ejs
+++ b/public/view/partials/header.ejs
@@ -927,7 +927,7 @@
               <div class="horizontal-logo">
                 <a href="index.html" class="header-logo">
                   <img
-                    src="   images/brand-logos/desktop-logo.png"
+                    src=""
                     alt="logo"
                     class="desktop-logo"
                   />
@@ -953,7 +953,7 @@
                     class="toggle-white"
                   />
                   <img
-                    src="   images/brand-logos/desktop-white.png"
+                    src=""
                     alt="logo"
                     class="desktop-white"
                   />
