All filterations done for chapter

--- a/public/view/m-chapter/manage-chapter.ejs
+++ b/public/view/m-chapter/manage-chapter.ejs
@@ -35,7 +35,7 @@
             <div class="btn-list">
               <button class="btn btn-white btn-wave" style="background-color: gainsboro !important; border-radius: 10px;">
                 </i> Total Chapter's <br />
-               <span> <b>22</b></span> 
+               <span id="total-chapters-count"> <b>22</b></span> 
               </button>
               <button class="btn btn-white btn-wave" style="background-color: gainsboro !important; border-radius: 10px;">
             </i> Running Chapter's <br />
