Some design modifications in js

--- a/public/view/m-member/manage-members.ejs
+++ b/public/view/m-member/manage-members.ejs
@@ -35,7 +35,7 @@
             <div class="btn-list">
               <button class="btn btn-white btn-wave" style="background-color: gainsboro !important; border-radius: 10px;">
                 </i> Total Member's <br />
-               <span> <b>117</b></span> 
+               <span id="total-members-count"> Loading..</span> 
               </button>
               <button class="btn btn-white btn-wave" style="background-color: gainsboro !important; border-radius: 10px;">
             </i> Active Member's <br />
