Remove note and taxable in add region and chapter

--- a/public/view/m-chapter/add-chapter.ejs
+++ b/public/view/m-chapter/add-chapter.ejs
@@ -493,7 +493,7 @@
     
     placeholder="17,700/-.."
   />
-  <div class="form-check mt-2">
+  <!-- <div class="form-check mt-2">
     <input
       type="checkbox"
       class="form-check-input"
@@ -507,7 +507,7 @@
       style="color: red"
       >Taxable?</label
     >
-  </div>
+  </div> -->
 </div>
 <div class="col-xl-6">
   <label for="chapter_visitor_fees" class="form-label"
@@ -521,7 +521,7 @@
     
     placeholder="1,200/-.."
   />
-  <div class="form-check mt-2">
+  <!-- <div class="form-check mt-2">
     <input
       type="checkbox"
       class="form-check-input"
@@ -535,7 +535,7 @@
       style="color: red"
       >Taxable?</label
     >
-  </div>
+  </div> -->
 </div>
 
 <div class="col-xl-6">
@@ -675,11 +675,11 @@
                                 placeholder="Enter postal code"
                               />
                             </div>
-                            <div class="col-12">
+                            <!-- <div class="col-12">
                               <button class="btn btn-danger btn-sm me-2 mb-2 mb-sm-0" id="chapter_location_note">
                                 Add Note<i class="bi bi-plus-lg ms-2"></i>
                               </button>
-                            </div>
+                            </div> -->
 
                             <div id="locationNoteContainer" class="col-12 mt-3"></div>
                           </div>
