--- a/public/view/m-region/add-region.ejs
+++ b/public/view/m-region/add-region.ejs
@@ -316,13 +316,13 @@
                       <div class="col-xl-6">
                         <label for="accolades" class="form-label">
                           Accolades Configuration
-                          <a href="/r/add-region">
-                            <button
+                          <!-- <a href="/r/add-region"> -->
+                            <!-- <button
                               type="button"
                               class="btn btn-outline-danger btn-sm"
                             >
                               Add Accolade +
-                            </button>
+                            </button> -->
                           </a>
                         </label>
 
@@ -713,7 +713,7 @@
                           </div>
                         </div>
 
-                        <div class="col-xl-12">
+                        <!-- <div class="col-xl-12">
                           <div class="form-check mt-2">
                             <input
                               type="checkbox"
@@ -735,7 +735,7 @@
                           >
                             Add Fee for Another Year +
                           </button>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                   </div>
